--- a/.env
+++ b/.env
@@ -1,9 +1,23 @@
-MAX_REQUESTS=5
-IP_BLOCK_PERIOD=1m
-TOKEN_BLOCK_PERIOD=1m
-TOKEN1_MAX_REQUESTS=3
-TOKEN1_IP_BLOCK_PERIOD=2m
-TOKEN1_TOKEN_BLOCK_PERIOD=2m
-TOKEN2_MAX_REQUESTS=7
-TOKEN2_IP_BLOCK_PERIOD=3m
-TOKEN2_TOKEN_BLOCK_PERIOD=3m
+# Configurações padrão
+NAME0_TOKEN=Padrao
+TOKEN0_MAX_REQUESTS=4
+TOKEN0_IP_BLOCK_PERIOD=3m
+TOKEN0_TOKEN_BLOCK_PERIOD=3m
+
+# Configurações para o token 'token1'
+NAME1_TOKEN=token1
+TOKEN1_MAX_REQUESTS=1
+TOKEN1_IP_BLOCK_PERIOD=3m
+TOKEN1_TOKEN_BLOCK_PERIOD=3m
+
+# Configurações para o token 'token2'
+NAME2_TOKEN=token2
+TOKEN2_MAX_REQUESTS=2
+TOKEN2_IP_BLOCK_PERIOD=1m
+TOKEN2_TOKEN_BLOCK_PERIOD=1m
+
+# Configurações para o token 'token3'
+NAME3_TOKEN=token3
+TOKEN3_MAX_REQUESTS=2
+TOKEN3_IP_BLOCK_PERIOD=1m
+TOKEN3_TOKEN_BLOCK_PERIOD=1m
