Pronto para entregar funcionalidade

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ NAME3_TOKEN=token3
 TOKEN3_MAX_REQUESTS=2
 TOKEN3_IP_BLOCK_PERIOD=1m
 TOKEN3_TOKEN_BLOCK_PERIOD=1m
+
+# Configuração para o token 'token4' ... até token9 (para aumentar a quantidade de tokens configuráveis tem que aumentar a quantidade conforme readme.md)
